--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,10 +2,11 @@ on:
   push:
     branches:
       - main
+  workflow_dispatch:
 
 jobs:
   FunctionsDeploy:
-    name: FrontDeploy
+    name: FunctionsDeploy
     runs-on: ubuntu-latest
     steps:
       - name: Checkout Repo
@@ -14,6 +15,7 @@ jobs:
         uses: actions/setup-node@v2
         with:
           node-version: 14.x
+          cache: npm
           registry-url: "https://registry.npmjs.org"
       - name: Install Dependencies
         run: npm install
