--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,7 +18,7 @@ jobs:
           registry-url: "https://registry.npmjs.org"
       - name: Install Dependencies
         run: |
-          npm install
+          cd functions && npm install
           npm install -g firebase-tools
       # - name: Build
       #   run: npm run build
