--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,6 +16,11 @@ jobs:
         with:
           node-version: 16.x
           registry-url: "https://registry.npmjs.org"
+      - name: Create dot env file
+      - shell: bash
+        run: |
+          touch .env
+          echo "${{ secrets.ENV_FILE }}" >> .env
       - name: Install Dependencies
         run: |
           cd functions && npm install
